commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44971,6 +44971,10 @@
     {
       "Date": "2022-11-10 16:00",
       "Rate": "19.3182"
+    },
+    {
+      "Date": "2022-11-10 17:00",
+      "Rate": "19.3167"
     }
   ]
 }
