commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44975,6 +44975,10 @@
     {
       "Date": "2022-11-10 17:00",
       "Rate": "19.3167"
+    },
+    {
+      "Date": "2022-11-10 18:00",
+      "Rate": "19.3371"
     }
   ]
 }
