commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44979,6 +44979,10 @@
     {
       "Date": "2022-11-10 18:00",
       "Rate": "19.3371"
+    },
+    {
+      "Date": "2022-11-10 19:00",
+      "Rate": "19.3191"
     }
   ]
 }
