commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44983,6 +44983,10 @@
     {
       "Date": "2022-11-10 19:00",
       "Rate": "19.3191"
+    },
+    {
+      "Date": "2022-11-10 20:00",
+      "Rate": "19.3223"
     }
   ]
 }
