commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44987,6 +44987,10 @@
     {
       "Date": "2022-11-10 20:00",
       "Rate": "19.3223"
+    },
+    {
+      "Date": "2022-11-10 21:00",
+      "Rate": "19.3164"
     }
   ]
 }
