commit from netcore service

--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -33,11 +33,11 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 19.71915,
-  "buy": 18.9777,
-  "date": "2022-11-10 17:50:10",
-  "prev_buy": 19.943,
-  "prev_sell": 19.1933
+  "sell": 19.77206,
+  "buy": 19.03552,
+  "date": "2022-11-11 09:30:10",
+  "prev_buy": 19.8972125,
+  "prev_sell": 19.15312
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -57,11 +57,11 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.62225,
-  "buy": 19.074525,
-  "date": "2022-11-10 17:10:14",
-  "prev_buy": 19.845,
-  "prev_sell": 19.291225
+  "sell": 19.6749,
+  "buy": 19.13264,
+  "date": "2022-11-11 09:30:12",
+  "prev_buy": 19.7994375,
+  "prev_sell": 19.25084
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -89,11 +89,11 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.7676,
-  "buy": 18.9777,
-  "date": "2022-11-10 17:10:16",
-  "prev_buy": 19.992,
-  "prev_sell": 19.1933
+  "sell": 19.82064,
+  "buy": 19.03552,
+  "date": "2022-11-11 09:30:13",
+  "prev_buy": 19.9461,
+  "prev_sell": 19.15312
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -105,19 +105,19 @@
 },{
   "bank_id": 14,
   "bank_name": "MONEX",
-  "sell": 20.33,
-  "buy": 19.81,
-  "date": "2022-11-11 09:20:16",
+  "sell": 20.22,
+  "buy": 19.69,
+  "date": "2022-11-11 09:30:14",
   "prev_buy": 20.33,
   "prev_sell": 19.81
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 19.9262,
-  "buy": 18.9157,
-  "date": "2022-11-11 09:20:16",
-  "prev_buy": 20.0556,
-  "prev_sell": 19.0451
+  "sell": 19.928,
+  "buy": 18.9175,
+  "date": "2022-11-11 09:30:14",
+  "prev_buy": 20.0526,
+  "prev_sell": 19.0421
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -161,89 +161,89 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.69008,
-  "buy": 18.8711925,
-  "date": "2022-11-10 17:10:27",
+  "sell": 19.742912,
+  "buy": 18.928688,
+  "date": "2022-11-11 09:30:18",
   "prev_buy": 19.9136,
   "prev_sell": 19.0855825
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.72884,
-  "buy": 18.9099225,
-  "date": "2022-11-10 17:10:27",
+  "sell": 19.781776,
+  "buy": 18.967536,
+  "date": "2022-11-11 09:30:19",
   "prev_buy": 19.9528,
   "prev_sell": 19.1247525
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.73853,
-  "buy": 18.7356375,
-  "date": "2022-11-10 17:10:27",
+  "sell": 19.791492,
+  "buy": 18.79272,
+  "date": "2022-11-11 09:30:19",
   "prev_buy": 19.9626,
   "prev_sell": 18.9484875
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.697832,
-  "buy": 18.931224,
-  "date": "2022-11-10 17:10:28",
+  "sell": 19.7506848,
+  "buy": 18.9889024,
+  "date": "2022-11-11 09:30:20",
   "prev_buy": 19.92144,
   "prev_sell": 19.146296
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.61256,
-  "buy": 18.74532,
-  "date": "2022-11-10 17:10:28",
+  "sell": 19.665184,
+  "buy": 18.802432,
+  "date": "2022-11-11 09:30:20",
   "prev_buy": 19.8352,
   "prev_sell": 18.95828
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 19.78698,
-  "buy": 18.532305,
-  "date": "2022-11-10 17:10:29",
+  "sell": 19.840072,
+  "buy": 18.588768,
+  "date": "2022-11-11 09:30:20",
   "prev_buy": 20.0116,
   "prev_sell": 18.742845
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.74822,
-  "buy": 18.958335,
-  "date": "2022-11-10 17:10:29",
+  "sell": 19.801208,
+  "buy": 19.016096,
+  "date": "2022-11-11 09:30:21",
   "prev_buy": 19.9724,
   "prev_sell": 19.173715
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 19.8645,
-  "buy": 18.5904,
-  "date": "2022-11-10 17:10:30",
+  "sell": 19.9178,
+  "buy": 18.64704,
+  "date": "2022-11-11 09:30:21",
   "prev_buy": 20.09,
   "prev_sell": 18.8016
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 19.834461,
-  "buy": 18.9099225,
-  "date": "2022-11-10 17:10:31",
+  "sell": 19.8876804,
+  "buy": 18.967536,
+  "date": "2022-11-11 09:30:22",
   "prev_buy": 20.05962,
   "prev_sell": 19.1247525
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 19.81605,
-  "buy": 18.9292875,
-  "date": "2022-11-10 17:10:31",
+  "sell": 19.86922,
+  "buy": 18.98696,
+  "date": "2022-11-11 09:30:22",
   "prev_buy": 20.041,
   "prev_sell": 19.1443375
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 19.81605,
-  "buy": 18.919605,
-  "date": "2022-11-10 17:10:32",
+  "sell": 19.86922,
+  "buy": 18.977248,
+  "date": "2022-11-11 09:30:22",
   "prev_buy": 20.041,
   "prev_sell": 19.134545
 },{
