commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44991,6 +44991,10 @@
     {
       "Date": "2022-11-10 21:00",
       "Rate": "19.3164"
+    },
+    {
+      "Date": "2022-11-11 06:00",
+      "Rate": "19.4862"
     }
   ]
 }
