commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44995,6 +44995,10 @@
     {
       "Date": "2022-11-11 06:00",
       "Rate": "19.4862"
+    },
+    {
+      "Date": "2022-11-11 07:00",
+      "Rate": "19.5462"
     }
   ]
 }
