commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44999,6 +44999,10 @@
     {
       "Date": "2022-11-11 07:00",
       "Rate": "19.5462"
+    },
+    {
+      "Date": "2022-11-11 08:00",
+      "Rate": "19.5280"
     }
   ]
 }
