commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45003,6 +45003,10 @@
     {
       "Date": "2022-11-11 08:00",
       "Rate": "19.5280"
+    },
+    {
+      "Date": "2022-11-11 09:00",
+      "Rate": "19.5534"
     }
   ]
 }
