commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45007,6 +45007,10 @@
     {
       "Date": "2022-11-11 09:00",
       "Rate": "19.5534"
+    },
+    {
+      "Date": "2022-11-11 10:00",
+      "Rate": "19.5262"
     }
   ]
 }
