commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45011,6 +45011,10 @@
     {
       "Date": "2022-11-11 10:00",
       "Rate": "19.5262"
+    },
+    {
+      "Date": "2022-11-11 11:00",
+      "Rate": "19.5044"
     }
   ]
 }
