commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45015,6 +45015,10 @@
     {
       "Date": "2022-11-11 11:00",
       "Rate": "19.5044"
+    },
+    {
+      "Date": "2022-11-11 12:00",
+      "Rate": "19.4908"
     }
   ]
 }
