--- a/indexRt.html
+++ b/indexRt.html
@@ -45019,6 +45019,10 @@
     {
       "Date": "2022-11-11 12:00",
       "Rate": "19.4908"
+    },
+    {
+      "Date": "2022-11-11 13:00",
+      "Rate": "19.5009"
     }
   ]
 }
