--- a/indexRt.html
+++ b/indexRt.html
@@ -45023,6 +45023,10 @@
     {
       "Date": "2022-11-11 13:00",
       "Rate": "19.5009"
+    },
+    {
+      "Date": "2022-11-11 14:00",
+      "Rate": "19.4983"
     }
   ]
 }
