--- a/indexRt.html
+++ b/indexRt.html
@@ -45027,6 +45027,10 @@
     {
       "Date": "2022-11-11 14:00",
       "Rate": "19.4983"
+    },
+    {
+      "Date": "2022-11-11 15:00",
+      "Rate": "19.5061"
     }
   ]
 }
