commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45031,6 +45031,10 @@
     {
       "Date": "2022-11-11 15:00",
       "Rate": "19.5061"
+    },
+    {
+      "Date": "2022-11-11 16:00",
+      "Rate": "19.5061"
     }
   ]
 }
