--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -4,16 +4,16 @@
   "sell": 20.1,
   "buy": 18.7,
   "date": "2022-11-11 11:10:08",
-  "prev_buy": 20,
-  "prev_sell": 18.6
+  "prev_buy": 20.1,
+  "prev_sell": 18.7
 },{
   "bank_id": 2,
   "bank_name": "BANAMEX",
-  "sell": 19.98,
-  "buy": 18.93,
-  "date": "2022-11-11 14:40:09",
-  "prev_buy": 19.86,
-  "prev_sell": 18.75
+  "sell": 20.01,
+  "buy": 18.86,
+  "date": "2022-11-14 10:10:13",
+  "prev_buy": 19.98,
+  "prev_sell": 18.93
 },{
   "bank_id": 3,
   "bank_name": "SANTANDER",
@@ -28,16 +28,16 @@
   "sell": 19.72,
   "buy": 18.98,
   "date": "2022-11-11 11:40:10",
-  "prev_buy": 19.77,
-  "prev_sell": 19.04
+  "prev_buy": 19.72,
+  "prev_sell": 18.98
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 19.871775,
-  "buy": 19.1247,
-  "date": "2022-11-11 17:20:11",
-  "prev_buy": 19.71915,
-  "prev_sell": 18.9777
+  "sell": 19.835959,
+  "buy": 19.10314,
+  "date": "2022-11-14 11:00:24",
+  "prev_buy": 19.871775,
+  "prev_sell": 19.1247
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -52,16 +52,16 @@
   "sell": 19.8,
   "buy": 18.4,
   "date": "2022-11-11 13:20:12",
-  "prev_buy": 19.6,
-  "prev_sell": 18.2
+  "prev_buy": 19.8,
+  "prev_sell": 18.4
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.774125,
-  "buy": 19.222275,
-  "date": "2022-11-11 17:20:13",
-  "prev_buy": 19.62225,
-  "prev_sell": 19.074525
+  "sell": 19.738485,
+  "buy": 19.200605,
+  "date": "2022-11-14 11:00:26",
+  "prev_buy": 19.774125,
+  "prev_sell": 19.222275
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -89,11 +89,11 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.9206,
-  "buy": 19.1247,
-  "date": "2022-11-11 17:20:16",
-  "prev_buy": 19.7676,
-  "prev_sell": 18.9777
+  "sell": 19.884696,
+  "buy": 19.10314,
+  "date": "2022-11-14 11:00:28",
+  "prev_buy": 19.9206,
+  "prev_sell": 19.1247
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -107,17 +107,17 @@
   "bank_name": "MONEX",
   "sell": 20.33,
   "buy": 19.81,
-  "date": "2022-11-11 21:10:15",
-  "prev_buy": 20.22,
-  "prev_sell": 19.69
+  "date": "2022-11-14 10:30:18",
+  "prev_buy": 20.33,
+  "prev_sell": 19.81
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 20.0119,
-  "buy": 19.0014,
-  "date": "2022-11-11 18:20:17",
-  "prev_buy": 19.8201,
-  "prev_sell": 18.8096
+  "sell": 19.9983,
+  "buy": 18.9878,
+  "date": "2022-11-14 11:00:30",
+  "prev_buy": 20.0119,
+  "prev_sell": 19.0014
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -129,8 +129,8 @@
 },{
   "bank_id": 17,
   "bank_name": "DOF",
-  "sell": " 19.3940",
-  "buy": " 19.3940",
+  "sell": " 19.5353",
+  "buy": " 19.5353",
   "date": "2022-06-03 07:10:28",
   "prev_buy": 19.5585,
   "prev_sell": 19.5585
@@ -153,107 +153,107 @@
 },{
   "bank_id": 20,
   "bank_name": "SAT",
-  "sell": " 19.3940",
-  "buy": " 19.3940",
-  "date": "2022-11-11 02:10:20",
-  "prev_buy": 19.5887,
-  "prev_sell": 19.5887
+  "sell": " 19.5353",
+  "buy": " 19.5353",
+  "date": "2022-11-14 02:10:19",
+  "prev_buy": 19.394,
+  "prev_sell": 19.394
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.84248,
-  "buy": 19.0173675,
-  "date": "2022-11-11 17:20:22",
-  "prev_buy": 19.69008,
-  "prev_sell": 18.8711925
+  "sell": 19.8067168,
+  "buy": 18.9959285,
+  "date": "2022-11-14 11:00:36",
+  "prev_buy": 19.84248,
+  "prev_sell": 19.0173675
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.88154,
-  "buy": 19.0563975,
-  "date": "2022-11-11 17:20:23",
-  "prev_buy": 19.72884,
-  "prev_sell": 18.9099225
+  "sell": 19.8457064,
+  "buy": 19.0349145,
+  "date": "2022-11-14 11:00:37",
+  "prev_buy": 19.88154,
+  "prev_sell": 19.0563975
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.891305,
-  "buy": 18.8807625,
-  "date": "2022-11-11 17:20:23",
-  "prev_buy": 19.73853,
-  "prev_sell": 18.7356375
+  "sell": 19.8554538,
+  "buy": 18.8594775,
+  "date": "2022-11-14 11:00:37",
+  "prev_buy": 19.891305,
+  "prev_sell": 18.8807625
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.850292,
-  "buy": 19.077864,
-  "date": "2022-11-11 17:20:24",
-  "prev_buy": 19.697832,
-  "prev_sell": 18.931224
+  "sell": 19.81451472,
+  "buy": 19.0563568,
+  "date": "2022-11-14 11:00:38",
+  "prev_buy": 19.850292,
+  "prev_sell": 19.077864
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.76436,
-  "buy": 18.89052,
-  "date": "2022-11-11 17:20:25",
-  "prev_buy": 19.61256,
-  "prev_sell": 18.74532
+  "sell": 19.7287376,
+  "buy": 18.869224,
+  "date": "2022-11-14 11:00:39",
+  "prev_buy": 19.76436,
+  "prev_sell": 18.89052
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 19.94013,
-  "buy": 18.675855,
-  "date": "2022-11-11 17:20:25",
-  "prev_buy": 19.78698,
-  "prev_sell": 18.532305
+  "sell": 19.9041908,
+  "buy": 18.654801,
+  "date": "2022-11-14 11:00:39",
+  "prev_buy": 19.94013,
+  "prev_sell": 18.675855
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.90107,
-  "buy": 19.105185,
-  "date": "2022-11-11 17:20:26",
-  "prev_buy": 19.74822,
-  "prev_sell": 18.958335
+  "sell": 19.8652012,
+  "buy": 19.083647,
+  "date": "2022-11-14 11:00:40",
+  "prev_buy": 19.90107,
+  "prev_sell": 19.105185
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 20.01825,
-  "buy": 18.7344,
-  "date": "2022-11-11 17:20:27",
-  "prev_buy": 19.8645,
-  "prev_sell": 18.5904
+  "sell": 19.98217,
+  "buy": 18.71328,
+  "date": "2022-11-14 11:00:40",
+  "prev_buy": 20.01825,
+  "prev_sell": 18.7344
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 19.9879785,
-  "buy": 19.0563975,
-  "date": "2022-11-11 17:20:27",
-  "prev_buy": 19.834461,
-  "prev_sell": 18.9099225
+  "sell": 19.95195306,
+  "buy": 19.0349145,
+  "date": "2022-11-14 11:00:40",
+  "prev_buy": 19.9879785,
+  "prev_sell": 19.0563975
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 19.969425,
-  "buy": 19.0759125,
-  "date": "2022-11-11 17:20:28",
-  "prev_buy": 19.81605,
-  "prev_sell": 18.9292875
+  "sell": 19.933433,
+  "buy": 19.0544075,
+  "date": "2022-11-14 11:00:41",
+  "prev_buy": 19.969425,
+  "prev_sell": 19.0759125
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 19.969425,
-  "buy": 19.066155,
-  "date": "2022-11-11 17:20:28",
-  "prev_buy": 19.81605,
-  "prev_sell": 18.919605
+  "sell": 19.933433,
+  "buy": 19.044661,
+  "date": "2022-11-14 11:00:41",
+  "prev_buy": 19.969425,
+  "prev_sell": 19.066155
 },{
   "bank_id": 32,
   "bank_name": "BANORTE",
   "sell": 19.8,
   "buy": 18.4,
-  "date": "2022-11-11 13:50:28",
-  "prev_buy": 19.6,
-  "prev_sell": 18.2
+  "date": "2022-11-14 11:00:42",
+  "prev_buy": 19.8,
+  "prev_sell": 18.4
 },{
   "bank_id": 33,
   "bank_name": "",
