commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45039,6 +45039,10 @@
     {
       "Date": "2022-11-11 17:00",
       "Rate": "19.5061"
+    },
+    {
+      "Date": "2022-11-14 08:00",
+      "Rate": "19.4020"
     }
   ]
 }
