commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45043,6 +45043,10 @@
     {
       "Date": "2022-11-14 08:00",
       "Rate": "19.4020"
+    },
+    {
+      "Date": "2022-11-14 09:00",
+      "Rate": "19.3948"
     }
   ]
 }
