commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45047,6 +45047,10 @@
     {
       "Date": "2022-11-14 09:00",
       "Rate": "19.3948"
+    },
+    {
+      "Date": "2022-11-14 10:00",
+      "Rate": "19.3493"
     }
   ]
 }
