commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45051,6 +45051,10 @@
     {
       "Date": "2022-11-14 10:00",
       "Rate": "19.3493"
+    },
+    {
+      "Date": "2022-11-14 11:00",
+      "Rate": "19.3327"
     }
   ]
 }
