commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45055,6 +45055,10 @@
     {
       "Date": "2022-11-14 11:00",
       "Rate": "19.3327"
+    },
+    {
+      "Date": "2022-11-14 12:00",
+      "Rate": "19.3402"
     }
   ]
 }
