commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45059,6 +45059,10 @@
     {
       "Date": "2022-11-14 12:00",
       "Rate": "19.3402"
+    },
+    {
+      "Date": "2022-11-14 13:00",
+      "Rate": "19.3547"
     }
   ]
 }
