--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -33,16 +33,16 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 19.700835,
-  "buy": 18.94732,
-  "date": "2022-11-14 17:30:11",
+  "sell": 19.71101,
+  "buy": 18.96006,
+  "date": "2022-11-14 17:50:12",
   "prev_buy": 19.871775,
   "prev_sell": 19.1247
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
-  "sell": 20.609,
-  "buy": 20.6025,
+  "sell": "19.3200",
+  "buy": "19.4690",
   "date": "2021-10-29 14:40:06",
   "prev_buy": 20.609,
   "prev_sell": 20.6025
@@ -57,9 +57,9 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.604025,
-  "buy": 19.04399,
-  "date": "2022-11-14 17:30:13",
+  "sell": 19.61415,
+  "buy": 19.056795,
+  "date": "2022-11-14 17:50:14",
   "prev_buy": 19.774125,
   "prev_sell": 19.222275
 },{
@@ -89,9 +89,9 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.74924,
-  "buy": 18.94732,
-  "date": "2022-11-14 17:30:15",
+  "sell": 19.75944,
+  "buy": 18.96006,
+  "date": "2022-11-14 17:50:16",
   "prev_buy": 19.9206,
   "prev_sell": 19.1247
 },{
@@ -108,14 +108,14 @@
   "sell": 20.22,
   "buy": 19.69,
   "date": "2022-11-14 17:20:20",
-  "prev_buy": 20.33,
-  "prev_sell": 19.81
+  "prev_buy": 20.22,
+  "prev_sell": 19.69
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 19.8638,
-  "buy": 18.8533,
-  "date": "2022-11-14 17:40:16",
+  "sell": 19.8707,
+  "buy": 18.8602,
+  "date": "2022-11-14 17:50:18",
   "prev_buy": 20.0119,
   "prev_sell": 19.0014
 },{
@@ -161,89 +161,89 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.671792,
-  "buy": 18.840983,
-  "date": "2022-11-14 17:30:40",
+  "sell": 19.681952,
+  "buy": 18.8536515,
+  "date": "2022-11-14 17:50:23",
   "prev_buy": 19.84248,
   "prev_sell": 19.0173675
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.710516,
-  "buy": 18.879651,
-  "date": "2022-11-14 17:30:41",
+  "sell": 19.720696,
+  "buy": 18.8923455,
+  "date": "2022-11-14 17:50:24",
   "prev_buy": 19.88154,
   "prev_sell": 19.0563975
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.720197,
-  "buy": 18.705645,
-  "date": "2022-11-14 17:30:41",
+  "sell": 19.730382,
+  "buy": 18.7182225,
+  "date": "2022-11-14 17:50:25",
   "prev_buy": 19.891305,
   "prev_sell": 18.8807625
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.6795368,
-  "buy": 18.9009184,
-  "date": "2022-11-14 17:30:41",
+  "sell": 19.6897008,
+  "buy": 18.9136272,
+  "date": "2022-11-14 17:50:25",
   "prev_buy": 19.850292,
   "prev_sell": 19.077864
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.594344,
-  "buy": 18.715312,
-  "date": "2022-11-14 17:30:42",
+  "sell": 19.604464,
+  "buy": 18.727896,
+  "date": "2022-11-14 17:50:25",
   "prev_buy": 19.76436,
   "prev_sell": 18.89052
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 19.768602,
-  "buy": 18.502638,
-  "date": "2022-11-14 17:30:42",
+  "sell": 19.778812,
+  "buy": 18.515079,
+  "date": "2022-11-14 17:50:26",
   "prev_buy": 19.94013,
   "prev_sell": 18.675855
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.729878,
-  "buy": 18.927986,
-  "date": "2022-11-14 17:30:43",
+  "sell": 19.740068,
+  "buy": 18.940713,
+  "date": "2022-11-14 17:50:27",
   "prev_buy": 19.90107,
   "prev_sell": 19.105185
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 19.84605,
-  "buy": 18.56064,
-  "date": "2022-11-14 17:30:43",
+  "sell": 19.8563,
+  "buy": 18.57312,
+  "date": "2022-11-14 17:50:27",
   "prev_buy": 20.01825,
   "prev_sell": 18.7344
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 19.8160389,
-  "buy": 18.879651,
-  "date": "2022-11-14 17:30:44",
+  "sell": 19.8262734,
+  "buy": 18.8923455,
+  "date": "2022-11-14 17:50:28",
   "prev_buy": 19.9879785,
   "prev_sell": 19.0563975
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 19.797645,
-  "buy": 18.898985,
-  "date": "2022-11-14 17:30:44",
+  "sell": 19.80787,
+  "buy": 18.9116925,
+  "date": "2022-11-14 17:50:28",
   "prev_buy": 19.969425,
   "prev_sell": 19.0759125
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 19.797645,
-  "buy": 18.889318,
-  "date": "2022-11-14 17:30:45",
+  "sell": 19.80787,
+  "buy": 18.902019,
+  "date": "2022-11-14 17:50:29",
   "prev_buy": 19.969425,
   "prev_sell": 19.066155
 },{
