--- a/indexRt.html
+++ b/indexRt.html
@@ -45063,6 +45063,10 @@
     {
       "Date": "2022-11-14 13:00",
       "Rate": "19.3547"
+    },
+    {
+      "Date": "2022-11-14 14:00",
+      "Rate": "19.3544"
     }
   ]
 }
