--- a/indexRt.html
+++ b/indexRt.html
@@ -45067,6 +45067,10 @@
     {
       "Date": "2022-11-14 14:00",
       "Rate": "19.3544"
+    },
+    {
+      "Date": "2022-11-14 15:00",
+      "Rate": "19.3537"
     }
   ]
 }
