commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45071,6 +45071,10 @@
     {
       "Date": "2022-11-14 15:00",
       "Rate": "19.3537"
+    },
+    {
+      "Date": "2022-11-14 16:00",
+      "Rate": "19.3537"
     }
   ]
 }
