commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45075,6 +45075,10 @@
     {
       "Date": "2022-11-14 16:00",
       "Rate": "19.3537"
+    },
+    {
+      "Date": "2022-11-14 17:00",
+      "Rate": "19.3444"
     }
   ]
 }
