commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45079,6 +45079,10 @@
     {
       "Date": "2022-11-14 17:00",
       "Rate": "19.3444"
+    },
+    {
+      "Date": "2022-11-14 18:00",
+      "Rate": "19.3298"
     }
   ]
 }
