commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45083,6 +45083,10 @@
     {
       "Date": "2022-11-14 18:00",
       "Rate": "19.3298"
+    },
+    {
+      "Date": "2022-11-14 19:00",
+      "Rate": "19.3369"
     }
   ]
 }
