commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45087,6 +45087,10 @@
     {
       "Date": "2022-11-14 19:00",
       "Rate": "19.3369"
+    },
+    {
+      "Date": "2022-11-14 20:00",
+      "Rate": "19.3248"
     }
   ]
 }
