commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45091,6 +45091,10 @@
     {
       "Date": "2022-11-14 20:00",
       "Rate": "19.3248"
+    },
+    {
+      "Date": "2022-11-14 21:00",
+      "Rate": "19.3295"
     }
   ]
 }
