commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45095,6 +45095,10 @@
     {
       "Date": "2022-11-14 21:00",
       "Rate": "19.3295"
+    },
+    {
+      "Date": "2022-11-14 22:00",
+      "Rate": "19.3227"
     }
   ]
 }
