commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45099,6 +45099,10 @@
     {
       "Date": "2022-11-14 22:00",
       "Rate": "19.3227"
+    },
+    {
+      "Date": "2022-11-14 23:00",
+      "Rate": "19.3242"
     }
   ]
 }
