--- a/indexRt.html
+++ b/indexRt.html
@@ -45103,6 +45103,10 @@
     {
       "Date": "2022-11-14 23:00",
       "Rate": "19.3242"
+    },
+    {
+      "Date": "2022-11-15 00:00",
+      "Rate": "19.3191"
     }
   ]
 }
