commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45107,6 +45107,10 @@
     {
       "Date": "2022-11-15 00:00",
       "Rate": "19.3191"
+    },
+    {
+      "Date": "2022-11-15 01:00",
+      "Rate": "19.3261"
     }
   ]
 }
