commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45111,6 +45111,10 @@
     {
       "Date": "2022-11-15 01:00",
       "Rate": "19.3261"
+    },
+    {
+      "Date": "2022-11-15 02:00",
+      "Rate": "19.3698"
     }
   ]
 }
