commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45115,6 +45115,10 @@
     {
       "Date": "2022-11-15 02:00",
       "Rate": "19.3698"
+    },
+    {
+      "Date": "2022-11-15 03:00",
+      "Rate": "19.3327"
     }
   ]
 }
