commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45119,6 +45119,10 @@
     {
       "Date": "2022-11-15 03:00",
       "Rate": "19.3327"
+    },
+    {
+      "Date": "2022-11-15 04:00",
+      "Rate": "19.3236"
     }
   ]
 }
