--- a/indexRt.html
+++ b/indexRt.html
@@ -45123,6 +45123,10 @@
     {
       "Date": "2022-11-15 04:00",
       "Rate": "19.3236"
+    },
+    {
+      "Date": "2022-11-15 05:00",
+      "Rate": "19.3360"
     }
   ]
 }
