--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -33,11 +33,11 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 19.6570825,
-  "buy": 18.92282,
-  "date": "2022-11-15 09:30:11",
-  "prev_buy": 19.871775,
-  "prev_sell": 19.1247
+  "sell": 19.64182,
+  "buy": 18.91106,
+  "date": "2022-11-15 09:40:11",
+  "prev_buy": 19.802585,
+  "prev_sell": 19.0659
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -57,11 +57,11 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.5604875,
-  "buy": 19.019365,
-  "date": "2022-11-15 09:30:13",
-  "prev_buy": 19.774125,
-  "prev_sell": 19.222275
+  "sell": 19.5453,
+  "buy": 19.007545,
+  "date": "2022-11-15 09:40:12",
+  "prev_buy": 19.705275,
+  "prev_sell": 19.163175
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -89,11 +89,11 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.70538,
-  "buy": 18.92282,
-  "date": "2022-11-15 09:30:14",
-  "prev_buy": 19.9206,
-  "prev_sell": 19.1247
+  "sell": 19.69008,
+  "buy": 18.91106,
+  "date": "2022-11-15 09:40:15",
+  "prev_buy": 19.85124,
+  "prev_sell": 19.0659
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -113,11 +113,11 @@
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 19.8176,
-  "buy": 18.8071,
-  "date": "2022-11-15 09:30:25",
-  "prev_buy": 19.9692,
-  "prev_sell": 18.9587
+  "sell": 19.841,
+  "buy": 18.808,
+  "date": "2022-11-15 09:40:16",
+  "prev_buy": 19.972,
+  "prev_sell": 18.968
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -161,89 +161,89 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.628104,
-  "buy": 18.8166205,
-  "date": "2022-11-15 09:30:39",
-  "prev_buy": 19.84248,
-  "prev_sell": 19.0173675
+  "sell": 19.612864,
+  "buy": 18.8049265,
+  "date": "2022-11-15 09:40:20",
+  "prev_buy": 19.773392,
+  "prev_sell": 18.9588975
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.666742,
-  "buy": 18.8552385,
-  "date": "2022-11-15 09:30:39",
-  "prev_buy": 19.88154,
-  "prev_sell": 19.0563975
+  "sell": 19.651472,
+  "buy": 18.8435205,
+  "date": "2022-11-15 09:40:20",
+  "prev_buy": 19.812316,
+  "prev_sell": 18.9978075
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.6764015,
-  "buy": 18.6814575,
-  "date": "2022-11-15 09:30:40",
-  "prev_buy": 19.891305,
-  "prev_sell": 18.8807625
+  "sell": 19.661124,
+  "buy": 18.6698475,
+  "date": "2022-11-15 09:40:21",
+  "prev_buy": 19.822047,
+  "prev_sell": 18.8227125
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.6358316,
-  "buy": 18.8764784,
-  "date": "2022-11-15 09:30:40",
-  "prev_buy": 19.850292,
-  "prev_sell": 19.077864
+  "sell": 19.6205856,
+  "buy": 18.8647472,
+  "date": "2022-11-15 09:40:21",
+  "prev_buy": 19.7811768,
+  "prev_sell": 19.019208
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.550828,
-  "buy": 18.691112,
-  "date": "2022-11-15 09:30:40",
-  "prev_buy": 19.76436,
-  "prev_sell": 18.89052
+  "sell": 19.535648,
+  "buy": 18.679496,
+  "date": "2022-11-15 09:40:22",
+  "prev_buy": 19.695544,
+  "prev_sell": 18.83244
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 19.724699,
-  "buy": 18.478713,
-  "date": "2022-11-15 09:30:41",
-  "prev_buy": 19.94013,
-  "prev_sell": 18.675855
+  "sell": 19.709384,
+  "buy": 18.467229,
+  "date": "2022-11-15 09:40:22",
+  "prev_buy": 19.870702,
+  "prev_sell": 18.618435
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.686061,
-  "buy": 18.903511,
-  "date": "2022-11-15 09:30:41",
-  "prev_buy": 19.90107,
-  "prev_sell": 19.105185
+  "sell": 19.670776,
+  "buy": 18.891763,
+  "date": "2022-11-15 09:40:23",
+  "prev_buy": 19.831778,
+  "prev_sell": 19.046445
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 19.801975,
-  "buy": 18.53664,
-  "date": "2022-11-15 09:30:42",
-  "prev_buy": 20.01825,
-  "prev_sell": 18.7344
+  "sell": 19.7866,
+  "buy": 18.52512,
+  "date": "2022-11-15 09:40:23",
+  "prev_buy": 19.94855,
+  "prev_sell": 18.6768
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 19.77203055,
-  "buy": 18.8552385,
-  "date": "2022-11-15 09:30:42",
+  "sell": 19.7566788,
+  "buy": 18.8435205,
+  "date": "2022-11-15 09:40:24",
   "prev_buy": 19.9879785,
   "prev_sell": 19.0563975
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 19.7536775,
-  "buy": 18.8745475,
-  "date": "2022-11-15 09:30:43",
+  "sell": 19.73834,
+  "buy": 18.8628175,
+  "date": "2022-11-15 09:40:24",
   "prev_buy": 19.969425,
   "prev_sell": 19.0759125
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 19.7536775,
-  "buy": 18.864893,
-  "date": "2022-11-15 09:30:43",
+  "sell": 19.73834,
+  "buy": 18.853169,
+  "date": "2022-11-15 09:40:25",
   "prev_buy": 19.969425,
   "prev_sell": 19.066155
 },{
