--- a/indexRt.html
+++ b/indexRt.html
@@ -45127,6 +45127,10 @@
     {
       "Date": "2022-11-15 05:00",
       "Rate": "19.3360"
+    },
+    {
+      "Date": "2022-11-15 06:00",
+      "Rate": "19.2805"
     }
   ]
 }
