commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45131,6 +45131,10 @@
     {
       "Date": "2022-11-15 06:00",
       "Rate": "19.2805"
+    },
+    {
+      "Date": "2022-11-15 07:00",
+      "Rate": "19.3546"
     }
   ]
 }
