commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45135,6 +45135,10 @@
     {
       "Date": "2022-11-15 07:00",
       "Rate": "19.3546"
+    },
+    {
+      "Date": "2022-11-15 08:00",
+      "Rate": "19.3780"
     }
   ]
 }
