commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45139,6 +45139,10 @@
     {
       "Date": "2022-11-15 08:00",
       "Rate": "19.3780"
+    },
+    {
+      "Date": "2022-11-15 09:00",
+      "Rate": "19.3821"
     }
   ]
 }
