commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45143,6 +45143,10 @@
     {
       "Date": "2022-11-15 09:00",
       "Rate": "19.3821"
+    },
+    {
+      "Date": "2022-11-15 10:00",
+      "Rate": "19.3773"
     }
   ]
 }
