commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45147,6 +45147,10 @@
     {
       "Date": "2022-11-15 10:00",
       "Rate": "19.3773"
+    },
+    {
+      "Date": "2022-11-15 11:00",
+      "Rate": "19.4311"
     }
   ]
 }
