--- a/indexRt.html
+++ b/indexRt.html
@@ -45151,6 +45151,10 @@
     {
       "Date": "2022-11-15 11:00",
       "Rate": "19.4311"
+    },
+    {
+      "Date": "2022-11-15 12:00",
+      "Rate": "19.3515"
     }
   ]
 }
