commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45155,6 +45155,10 @@
     {
       "Date": "2022-11-15 12:00",
       "Rate": "19.3515"
+    },
+    {
+      "Date": "2022-11-15 13:00",
+      "Rate": "19.3727"
     }
   ]
 }
