commit from netcore service

--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -4,8 +4,8 @@
   "sell": 20,
   "buy": 18.6,
   "date": "2022-11-15 15:00:08",
-  "prev_buy": 20.1,
-  "prev_sell": 18.7
+  "prev_buy": 19.9,
+  "prev_sell": 18.5
 },{
   "bank_id": 2,
   "bank_name": "BANAMEX",
@@ -33,11 +33,11 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 19.725255,
-  "buy": 18.9728,
-  "date": "2022-11-15 17:20:10",
-  "prev_buy": 19.69473,
-  "prev_sell": 18.96398
+  "sell": 19.713045,
+  "buy": 18.96006,
+  "date": "2022-11-15 17:40:11",
+  "prev_buy": 19.700835,
+  "prev_sell": 18.94732
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -57,11 +57,11 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.628325,
-  "buy": 19.0696,
-  "date": "2022-11-15 17:20:13",
-  "prev_buy": 19.59795,
-  "prev_sell": 19.060735
+  "sell": 19.616175,
+  "buy": 19.056795,
+  "date": "2022-11-15 17:40:13",
+  "prev_buy": 19.604025,
+  "prev_sell": 19.04399
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -89,11 +89,11 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.77372,
-  "buy": 18.9728,
-  "date": "2022-11-15 17:20:15",
-  "prev_buy": 19.74312,
-  "prev_sell": 18.96398
+  "sell": 19.76148,
+  "buy": 18.96006,
+  "date": "2022-11-15 17:40:16",
+  "prev_buy": 19.74924,
+  "prev_sell": 18.94732
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -113,11 +113,11 @@
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 19.8698,
-  "buy": 18.8593,
-  "date": "2022-11-15 17:10:34",
-  "prev_buy": 19.863,
-  "prev_sell": 18.836
+  "sell": 19.87,
+  "buy": 18.855,
+  "date": "2022-11-15 17:40:18",
+  "prev_buy": 19.8638,
+  "prev_sell": 18.8533
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -161,91 +161,91 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.696176,
-  "buy": 18.86632,
-  "date": "2022-11-15 17:20:21",
-  "prev_buy": 19.665696,
-  "prev_sell": 18.8575495
+  "sell": 19.683984,
+  "buy": 18.8536515,
+  "date": "2022-11-15 17:40:23",
+  "prev_buy": 19.671792,
+  "prev_sell": 18.840983
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.734948,
-  "buy": 18.90504,
-  "date": "2022-11-15 17:20:21",
-  "prev_buy": 19.704408,
-  "prev_sell": 18.8962515
+  "sell": 19.722732,
+  "buy": 18.8923455,
+  "date": "2022-11-15 17:40:23",
+  "prev_buy": 19.710516,
+  "prev_sell": 18.879651
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.744641,
-  "buy": 18.7308,
-  "date": "2022-11-15 17:20:22",
-  "prev_buy": 19.714086,
-  "prev_sell": 18.7220925
+  "sell": 19.732419,
+  "buy": 18.7182225,
+  "date": "2022-11-15 17:40:24",
+  "prev_buy": 19.720197,
+  "prev_sell": 18.705645
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.7039304,
-  "buy": 18.926336,
-  "date": "2022-11-15 17:20:23",
-  "prev_buy": 19.6734384,
-  "prev_sell": 18.9175376
+  "sell": 19.6917336,
+  "buy": 18.9136272,
+  "date": "2022-11-15 17:40:24",
+  "prev_buy": 19.6795368,
+  "prev_sell": 18.9009184
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.618632,
-  "buy": 18.74048,
-  "date": "2022-11-15 17:20:23",
-  "prev_buy": 19.588272,
-  "prev_sell": 18.731768
+  "sell": 19.606488,
+  "buy": 18.727896,
+  "date": "2022-11-15 17:40:25",
+  "prev_buy": 19.594344,
+  "prev_sell": 18.715312
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 19.793106,
-  "buy": 18.52752,
-  "date": "2022-11-15 17:20:23",
-  "prev_buy": 19.762476,
-  "prev_sell": 18.518907
+  "sell": 19.780854,
+  "buy": 18.515079,
+  "date": "2022-11-15 17:40:26",
+  "prev_buy": 19.768602,
+  "prev_sell": 18.502638
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.754334,
-  "buy": 18.95344,
-  "date": "2022-11-15 17:20:24",
-  "prev_buy": 19.723764,
-  "prev_sell": 18.944629
+  "sell": 19.742106,
+  "buy": 18.940713,
+  "date": "2022-11-15 17:40:26",
+  "prev_buy": 19.729878,
+  "prev_sell": 18.927986
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 19.87065,
-  "buy": 18.5856,
-  "date": "2022-11-15 17:20:25",
-  "prev_buy": 19.849125,
-  "prev_sell": 18.5808
+  "sell": 19.85835,
+  "buy": 18.57312,
+  "date": "2022-11-15 17:40:27",
+  "prev_buy": 19.84605,
+  "prev_sell": 18.56064
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 19.8406017,
-  "buy": 18.90504,
-  "date": "2022-11-15 17:20:25",
-  "prev_buy": 19.81910925,
-  "prev_sell": 18.9001575
+  "sell": 19.8283203,
+  "buy": 18.8923455,
+  "date": "2022-11-15 17:40:27",
+  "prev_buy": 19.8160389,
+  "prev_sell": 18.879651
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 19.822185,
-  "buy": 18.9244,
-  "date": "2022-11-15 17:20:26",
-  "prev_buy": 19.8007125,
-  "prev_sell": 18.9195125
+  "sell": 19.809915,
+  "buy": 18.9116925,
+  "date": "2022-11-15 17:40:27",
+  "prev_buy": 19.797645,
+  "prev_sell": 18.898985
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 19.822185,
-  "buy": 18.91472,
-  "date": "2022-11-15 17:20:26",
-  "prev_buy": 19.8007125,
-  "prev_sell": 18.909835
+  "sell": 19.809915,
+  "buy": 18.902019,
+  "date": "2022-11-15 17:40:28",
+  "prev_buy": 19.797645,
+  "prev_sell": 18.889318
 },{
   "bank_id": 32,
   "bank_name": "BANORTE",
