--- a/indexRt.html
+++ b/indexRt.html
@@ -45159,6 +45159,10 @@
     {
       "Date": "2022-11-15 13:00",
       "Rate": "19.3727"
+    },
+    {
+      "Date": "2022-11-15 14:00",
+      "Rate": "19.3610"
     }
   ]
 }
