--- a/indexRt.html
+++ b/indexRt.html
@@ -45163,6 +45163,10 @@
     {
       "Date": "2022-11-15 14:00",
       "Rate": "19.3610"
+    },
+    {
+      "Date": "2022-11-15 15:00",
+      "Rate": "19.3677"
     }
   ]
 }
