commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45167,6 +45167,10 @@
     {
       "Date": "2022-11-15 15:00",
       "Rate": "19.3677"
+    },
+    {
+      "Date": "2022-11-15 16:00",
+      "Rate": "19.3564"
     }
   ]
 }
