commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45171,6 +45171,10 @@
     {
       "Date": "2022-11-15 16:00",
       "Rate": "19.3564"
+    },
+    {
+      "Date": "2022-11-15 17:00",
+      "Rate": "19.3839"
     }
   ]
 }
