--- a/indexRt.html
+++ b/indexRt.html
@@ -45175,6 +45175,10 @@
     {
       "Date": "2022-11-15 17:00",
       "Rate": "19.3839"
+    },
+    {
+      "Date": "2022-11-15 18:00",
+      "Rate": "19.3882"
     }
   ]
 }
