commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45179,6 +45179,10 @@
     {
       "Date": "2022-11-15 18:00",
       "Rate": "19.3882"
+    },
+    {
+      "Date": "2022-11-15 19:00",
+      "Rate": "19.3684"
     }
   ]
 }
