commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45183,6 +45183,10 @@
     {
       "Date": "2022-11-15 19:00",
       "Rate": "19.3684"
+    },
+    {
+      "Date": "2022-11-15 20:00",
+      "Rate": "19.3857"
     }
   ]
 }
