commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45187,6 +45187,10 @@
     {
       "Date": "2022-11-15 20:00",
       "Rate": "19.3857"
+    },
+    {
+      "Date": "2022-11-15 21:00",
+      "Rate": "19.3904"
     }
   ]
 }
