--- a/indexRt.html
+++ b/indexRt.html
@@ -45191,6 +45191,10 @@
     {
       "Date": "2022-11-15 21:00",
       "Rate": "19.3904"
+    },
+    {
+      "Date": "2022-11-15 22:00",
+      "Rate": "19.3655"
     }
   ]
 }
