--- a/indexRt.html
+++ b/indexRt.html
@@ -45195,6 +45195,10 @@
     {
       "Date": "2022-11-15 22:00",
       "Rate": "19.3655"
+    },
+    {
+      "Date": "2022-11-15 23:00",
+      "Rate": "19.3641"
     }
   ]
 }
