commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45199,6 +45199,10 @@
     {
       "Date": "2022-11-15 23:00",
       "Rate": "19.3641"
+    },
+    {
+      "Date": "2022-11-16 00:00",
+      "Rate": "19.3386"
     }
   ]
 }
