--- a/indexRt.html
+++ b/indexRt.html
@@ -45203,6 +45203,10 @@
     {
       "Date": "2022-11-16 00:00",
       "Rate": "19.3386"
+    },
+    {
+      "Date": "2022-11-16 01:00",
+      "Rate": "19.3310"
     }
   ]
 }
