--- a/indexRt.html
+++ b/indexRt.html
@@ -45207,6 +45207,10 @@
     {
       "Date": "2022-11-16 01:00",
       "Rate": "19.3310"
+    },
+    {
+      "Date": "2022-11-16 02:00",
+      "Rate": "19.3318"
     }
   ]
 }
