commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45211,6 +45211,10 @@
     {
       "Date": "2022-11-16 02:00",
       "Rate": "19.3318"
+    },
+    {
+      "Date": "2022-11-16 03:00",
+      "Rate": "19.3303"
     }
   ]
 }
