commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45215,6 +45215,10 @@
     {
       "Date": "2022-11-16 03:00",
       "Rate": "19.3303"
+    },
+    {
+      "Date": "2022-11-16 04:00",
+      "Rate": "19.3712"
     }
   ]
 }
