commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45219,6 +45219,10 @@
     {
       "Date": "2022-11-16 04:00",
       "Rate": "19.3712"
+    },
+    {
+      "Date": "2022-11-16 05:00",
+      "Rate": "19.3244"
     }
   ]
 }
