--- a/indexRt.html
+++ b/indexRt.html
@@ -45223,6 +45223,10 @@
     {
       "Date": "2022-11-16 05:00",
       "Rate": "19.3244"
+    },
+    {
+      "Date": "2022-11-16 06:00",
+      "Rate": "19.3247"
     }
   ]
 }
