commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45227,6 +45227,10 @@
     {
       "Date": "2022-11-16 06:00",
       "Rate": "19.3247"
+    },
+    {
+      "Date": "2022-11-16 07:00",
+      "Rate": "19.3125"
     }
   ]
 }
