commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45231,6 +45231,10 @@
     {
       "Date": "2022-11-16 07:00",
       "Rate": "19.3125"
+    },
+    {
+      "Date": "2022-11-16 08:00",
+      "Rate": "19.3082"
     }
   ]
 }
