--- a/indexRt.html
+++ b/indexRt.html
@@ -45235,6 +45235,10 @@
     {
       "Date": "2022-11-16 08:00",
       "Rate": "19.3082"
+    },
+    {
+      "Date": "2022-11-16 09:00",
+      "Rate": "19.3173"
     }
   ]
 }
