--- a/indexRt.html
+++ b/indexRt.html
@@ -45239,6 +45239,10 @@
     {
       "Date": "2022-11-16 09:00",
       "Rate": "19.3173"
+    },
+    {
+      "Date": "2022-11-16 10:00",
+      "Rate": "19.2955"
     }
   ]
 }
