--- a/indexRt.html
+++ b/indexRt.html
@@ -45243,6 +45243,10 @@
     {
       "Date": "2022-11-16 10:00",
       "Rate": "19.2955"
+    },
+    {
+      "Date": "2022-11-16 11:00",
+      "Rate": "19.3184"
     }
   ]
 }
