commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45247,6 +45247,10 @@
     {
       "Date": "2022-11-16 11:00",
       "Rate": "19.3184"
+    },
+    {
+      "Date": "2022-11-16 12:00",
+      "Rate": "19.3097"
     }
   ]
 }
