commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45251,6 +45251,10 @@
     {
       "Date": "2022-11-16 12:00",
       "Rate": "19.3097"
+    },
+    {
+      "Date": "2022-11-16 13:00",
+      "Rate": "19.3133"
     }
   ]
 }
