--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -33,11 +33,11 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 19.6538265,
-  "buy": 18.927426,
-  "date": "2022-11-16 16:40:11",
-  "prev_buy": 19.704905,
-  "prev_sell": 18.96888
+  "sell": 19.64985825,
+  "buy": 18.923016,
+  "date": "2022-11-16 16:50:10",
+  "prev_buy": 19.7079575,
+  "prev_sell": 18.978484
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -57,11 +57,11 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.5572475,
-  "buy": 19.0239945,
-  "date": "2022-11-16 16:40:13",
-  "prev_buy": 19.608075,
-  "prev_sell": 19.06566
+  "sell": 19.55329875,
+  "buy": 19.019562,
+  "date": "2022-11-16 16:50:13",
+  "prev_buy": 19.6111125,
+  "prev_sell": 19.075313
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -89,11 +89,11 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.702116,
-  "buy": 18.927426,
-  "date": "2022-11-16 16:40:16",
-  "prev_buy": 19.75536,
-  "prev_sell": 18.97182
+  "sell": 19.698138,
+  "buy": 18.923016,
+  "date": "2022-11-16 16:50:15",
+  "prev_buy": 19.75638,
+  "prev_sell": 18.978484
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -105,17 +105,17 @@
 },{
   "bank_id": 14,
   "bank_name": "MONEX",
-  "sell": 20.22,
-  "buy": 19.69,
-  "date": "2022-11-16 16:20:16",
+  "sell": 20.33,
+  "buy": 19.81,
+  "date": "2022-11-16 16:50:16",
   "prev_buy": 20.33,
   "prev_sell": 19.81
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 19.8177,
-  "buy": 18.8072,
-  "date": "2022-11-16 16:40:17",
+  "sell": 19.814,
+  "buy": 18.805,
+  "date": "2022-11-16 16:50:16",
   "prev_buy": 19.866,
   "prev_sell": 18.857
 },{
@@ -161,89 +161,89 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.6248528,
-  "buy": 18.82120065,
-  "date": "2022-11-16 16:40:22",
+  "sell": 19.6208904,
+  "buy": 18.8168154,
+  "date": "2022-11-16 16:50:22",
   "prev_buy": 19.677888,
   "prev_sell": 18.8653455
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.6634844,
-  "buy": 18.85982805,
-  "date": "2022-11-16 16:40:22",
+  "sell": 19.6595142,
+  "buy": 18.8554338,
+  "date": "2022-11-16 16:50:23",
   "prev_buy": 19.716624,
   "prev_sell": 18.9040635
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.6731423,
-  "buy": 18.68600475,
-  "date": "2022-11-16 16:40:23",
+  "sell": 19.66917015,
+  "buy": 18.681651,
+  "date": "2022-11-16 16:50:24",
   "prev_buy": 19.726308,
   "prev_sell": 18.7298325
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.63257912,
-  "buy": 18.88107312,
-  "date": "2022-11-16 16:40:23",
+  "sell": 19.62861516,
+  "buy": 18.87667392,
+  "date": "2022-11-16 16:50:24",
   "prev_buy": 19.6856352,
   "prev_sell": 18.9253584
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.5475896,
-  "buy": 18.6956616,
-  "date": "2022-11-16 16:40:24",
+  "sell": 19.5436428,
+  "buy": 18.6913056,
+  "date": "2022-11-16 16:50:25",
   "prev_buy": 19.600416,
   "prev_sell": 18.739512
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 19.7214318,
-  "buy": 18.4832109,
-  "date": "2022-11-16 16:40:24",
+  "sell": 19.7174499,
+  "buy": 18.4789044,
+  "date": "2022-11-16 16:50:25",
   "prev_buy": 19.774728,
   "prev_sell": 18.526563
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.6828002,
-  "buy": 18.9081123,
-  "date": "2022-11-16 16:40:24",
+  "sell": 19.6788261,
+  "buy": 18.9037068,
+  "date": "2022-11-16 16:50:26",
   "prev_buy": 19.735992,
   "prev_sell": 18.952461
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 19.798695,
-  "buy": 18.541152,
-  "date": "2022-11-16 16:40:25",
+  "sell": 19.7946975,
+  "buy": 18.536832,
+  "date": "2022-11-16 16:50:26",
   "prev_buy": 19.8522,
   "prev_sell": 18.58464
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 19.76875551,
-  "buy": 18.85982805,
-  "date": "2022-11-16 16:40:25",
+  "sell": 19.76476406,
+  "buy": 18.8554338,
+  "date": "2022-11-16 16:50:27",
   "prev_buy": 19.8221796,
   "prev_sell": 18.9040635
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 19.7504055,
-  "buy": 18.87914175,
-  "date": "2022-11-16 16:40:26",
+  "sell": 19.74641775,
+  "buy": 18.874743,
+  "date": "2022-11-16 16:50:27",
   "prev_buy": 19.80378,
   "prev_sell": 18.9234225
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 19.7504055,
-  "buy": 18.8694849,
-  "date": "2022-11-16 16:40:26",
+  "sell": 19.74641775,
+  "buy": 18.8650884,
+  "date": "2022-11-16 16:50:28",
   "prev_buy": 19.80378,
   "prev_sell": 18.913743
 },{
