--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -33,11 +33,11 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 19.656065,
-  "buy": 18.9238,
-  "date": "2022-11-16 17:20:11",
-  "prev_buy": 19.725255,
-  "prev_sell": 18.9728
+  "sell": 19.647925,
+  "buy": 18.9091,
+  "date": "2022-11-16 17:30:11",
+  "prev_buy": 19.713045,
+  "prev_sell": 18.96006
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -57,11 +57,11 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.559475,
-  "buy": 19.02035,
-  "date": "2022-11-16 17:20:14",
-  "prev_buy": 19.628325,
-  "prev_sell": 19.0696
+  "sell": 19.551375,
+  "buy": 19.005575,
+  "date": "2022-11-16 17:30:13",
+  "prev_buy": 19.616175,
+  "prev_sell": 19.056795
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -89,11 +89,11 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.70436,
-  "buy": 18.9238,
-  "date": "2022-11-16 17:20:17",
-  "prev_buy": 19.77372,
-  "prev_sell": 18.9728
+  "sell": 19.6962,
+  "buy": 18.9091,
+  "date": "2022-11-16 17:30:16",
+  "prev_buy": 19.76148,
+  "prev_sell": 18.96006
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -105,19 +105,19 @@
 },{
   "bank_id": 14,
   "bank_name": "MONEX",
-  "sell": 20.33,
-  "buy": 19.81,
-  "date": "2022-11-16 17:20:18",
+  "sell": 20.22,
+  "buy": 19.69,
+  "date": "2022-11-16 17:40:16",
   "prev_buy": 20.33,
   "prev_sell": 19.81
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 19.8125,
-  "buy": 18.802,
-  "date": "2022-11-16 17:20:19",
-  "prev_buy": 19.8698,
-  "prev_sell": 18.8593
+  "sell": 19.8312,
+  "buy": 18.8207,
+  "date": "2022-11-16 17:40:17",
+  "prev_buy": 19.87,
+  "prev_sell": 18.855
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -161,91 +161,91 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.627088,
-  "buy": 18.817595,
-  "date": "2022-11-16 17:20:23",
-  "prev_buy": 19.696176,
-  "prev_sell": 18.86632
+  "sell": 19.61896,
+  "buy": 18.8029775,
+  "date": "2022-11-16 17:30:41",
+  "prev_buy": 19.683984,
+  "prev_sell": 18.8536515
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.665724,
-  "buy": 18.856215,
-  "date": "2022-11-16 17:20:24",
-  "prev_buy": 19.734948,
-  "prev_sell": 18.90504
+  "sell": 19.65758,
+  "buy": 18.8415675,
+  "date": "2022-11-16 17:30:41",
+  "prev_buy": 19.722732,
+  "prev_sell": 18.8923455
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.675383,
-  "buy": 18.682425,
-  "date": "2022-11-16 17:20:25",
-  "prev_buy": 19.744641,
-  "prev_sell": 18.7308
+  "sell": 19.667235,
+  "buy": 18.6679125,
+  "date": "2022-11-16 17:30:42",
+  "prev_buy": 19.732419,
+  "prev_sell": 18.7182225
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.6348152,
-  "buy": 18.877456,
-  "date": "2022-11-16 17:20:26",
-  "prev_buy": 19.7039304,
-  "prev_sell": 18.926336
+  "sell": 19.626684,
+  "buy": 18.862792,
+  "date": "2022-11-16 17:30:42",
+  "prev_buy": 19.6917336,
+  "prev_sell": 18.9136272
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.549816,
-  "buy": 18.69208,
-  "date": "2022-11-16 17:20:26",
-  "prev_buy": 19.618632,
-  "prev_sell": 18.74048
+  "sell": 19.54172,
+  "buy": 18.67756,
+  "date": "2022-11-16 17:30:43",
+  "prev_buy": 19.606488,
+  "prev_sell": 18.727896
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 19.723678,
-  "buy": 18.47967,
-  "date": "2022-11-16 17:20:26",
-  "prev_buy": 19.793106,
-  "prev_sell": 18.52752
+  "sell": 19.71551,
+  "buy": 18.465315,
+  "date": "2022-11-16 17:30:43",
+  "prev_buy": 19.780854,
+  "prev_sell": 18.515079
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.685042,
-  "buy": 18.90449,
-  "date": "2022-11-16 17:20:27",
-  "prev_buy": 19.754334,
-  "prev_sell": 18.95344
+  "sell": 19.67689,
+  "buy": 18.889805,
+  "date": "2022-11-16 17:30:44",
+  "prev_buy": 19.742106,
+  "prev_sell": 18.940713
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 19.80095,
-  "buy": 18.5376,
-  "date": "2022-11-16 17:20:27",
-  "prev_buy": 19.87065,
-  "prev_sell": 18.5856
+  "sell": 19.79275,
+  "buy": 18.5232,
+  "date": "2022-11-16 17:30:44",
+  "prev_buy": 19.85835,
+  "prev_sell": 18.57312
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 19.7710071,
-  "buy": 18.856215,
-  "date": "2022-11-16 17:20:28",
-  "prev_buy": 19.8406017,
-  "prev_sell": 18.90504
+  "sell": 19.7628195,
+  "buy": 18.8415675,
+  "date": "2022-11-16 17:30:45",
+  "prev_buy": 19.8283203,
+  "prev_sell": 18.8923455
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 19.752655,
-  "buy": 18.875525,
-  "date": "2022-11-16 17:20:28",
-  "prev_buy": 19.822185,
-  "prev_sell": 18.9244
+  "sell": 19.744475,
+  "buy": 18.8608625,
+  "date": "2022-11-16 17:30:45",
+  "prev_buy": 19.809915,
+  "prev_sell": 18.9116925
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 19.752655,
-  "buy": 18.86587,
-  "date": "2022-11-16 17:20:29",
-  "prev_buy": 19.822185,
-  "prev_sell": 18.91472
+  "sell": 19.744475,
+  "buy": 18.851215,
+  "date": "2022-11-16 17:30:46",
+  "prev_buy": 19.809915,
+  "prev_sell": 18.902019
 },{
   "bank_id": 32,
   "bank_name": "BANORTE",
