--- a/indexRt.html
+++ b/indexRt.html
@@ -45255,6 +45255,10 @@
     {
       "Date": "2022-11-16 13:00",
       "Rate": "19.3133"
+    },
+    {
+      "Date": "2022-11-16 14:00",
+      "Rate": "19.3469"
     }
   ]
 }
