commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45259,6 +45259,10 @@
     {
       "Date": "2022-11-16 14:00",
       "Rate": "19.3469"
+    },
+    {
+      "Date": "2022-11-16 15:00",
+      "Rate": "19.3329"
     }
   ]
 }
