commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45263,6 +45263,10 @@
     {
       "Date": "2022-11-16 15:00",
       "Rate": "19.3329"
+    },
+    {
+      "Date": "2022-11-16 16:00",
+      "Rate": "19.3365"
     }
   ]
 }
