commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45267,6 +45267,10 @@
     {
       "Date": "2022-11-16 16:00",
       "Rate": "19.3365"
+    },
+    {
+      "Date": "2022-11-16 17:00",
+      "Rate": "19.3432"
     }
   ]
 }
