commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45271,6 +45271,10 @@
     {
       "Date": "2022-11-16 17:00",
       "Rate": "19.3432"
+    },
+    {
+      "Date": "2022-11-16 18:00",
+      "Rate": "19.3433"
     }
   ]
 }
