--- a/indexRt.html
+++ b/indexRt.html
@@ -45275,6 +45275,10 @@
     {
       "Date": "2022-11-16 18:00",
       "Rate": "19.3433"
+    },
+    {
+      "Date": "2022-11-16 19:00",
+      "Rate": "19.3615"
     }
   ]
 }
