--- a/indexRt.html
+++ b/indexRt.html
@@ -45279,6 +45279,10 @@
     {
       "Date": "2022-11-16 19:00",
       "Rate": "19.3615"
+    },
+    {
+      "Date": "2022-11-16 20:00",
+      "Rate": "19.3529"
     }
   ]
 }
