--- a/indexRt.html
+++ b/indexRt.html
@@ -45283,6 +45283,10 @@
     {
       "Date": "2022-11-16 20:00",
       "Rate": "19.3529"
+    },
+    {
+      "Date": "2022-11-16 21:00",
+      "Rate": "19.3550"
     }
   ]
 }
