commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45287,6 +45287,10 @@
     {
       "Date": "2022-11-16 21:00",
       "Rate": "19.3550"
+    },
+    {
+      "Date": "2022-11-16 22:00",
+      "Rate": "19.3390"
     }
   ]
 }
