commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45291,6 +45291,10 @@
     {
       "Date": "2022-11-16 22:00",
       "Rate": "19.3390"
+    },
+    {
+      "Date": "2022-11-16 23:00",
+      "Rate": "19.3286"
     }
   ]
 }
