commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45295,6 +45295,10 @@
     {
       "Date": "2022-11-16 23:00",
       "Rate": "19.3286"
+    },
+    {
+      "Date": "2022-11-17 00:00",
+      "Rate": "19.3288"
     }
   ]
 }
