commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45299,6 +45299,10 @@
     {
       "Date": "2022-11-17 00:00",
       "Rate": "19.3288"
+    },
+    {
+      "Date": "2022-11-17 01:00",
+      "Rate": "19.3492"
     }
   ]
 }
