commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45303,6 +45303,10 @@
     {
       "Date": "2022-11-17 01:00",
       "Rate": "19.3492"
+    },
+    {
+      "Date": "2022-11-17 02:00",
+      "Rate": "19.3734"
     }
   ]
 }
