commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45307,6 +45307,10 @@
     {
       "Date": "2022-11-17 02:00",
       "Rate": "19.3734"
+    },
+    {
+      "Date": "2022-11-17 03:00",
+      "Rate": "19.4463"
     }
   ]
 }
