commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45311,6 +45311,10 @@
     {
       "Date": "2022-11-17 03:00",
       "Rate": "19.4463"
+    },
+    {
+      "Date": "2022-11-17 04:00",
+      "Rate": "19.4106"
     }
   ]
 }
