--- a/indexRt.html
+++ b/indexRt.html
@@ -45315,6 +45315,10 @@
     {
       "Date": "2022-11-17 04:00",
       "Rate": "19.4106"
+    },
+    {
+      "Date": "2022-11-17 05:00",
+      "Rate": "19.4371"
     }
   ]
 }
