--- a/indexRt.html
+++ b/indexRt.html
@@ -45319,6 +45319,10 @@
     {
       "Date": "2022-11-17 05:00",
       "Rate": "19.4371"
+    },
+    {
+      "Date": "2022-11-17 06:00",
+      "Rate": "19.4479"
     }
   ]
 }
