commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45323,6 +45323,10 @@
     {
       "Date": "2022-11-17 06:00",
       "Rate": "19.4479"
+    },
+    {
+      "Date": "2022-11-17 07:00",
+      "Rate": "19.4295"
     }
   ]
 }
