commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45327,6 +45327,10 @@
     {
       "Date": "2022-11-17 07:00",
       "Rate": "19.4295"
+    },
+    {
+      "Date": "2022-11-17 08:00",
+      "Rate": "19.4392"
     }
   ]
 }
