commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45331,6 +45331,10 @@
     {
       "Date": "2022-11-17 08:00",
       "Rate": "19.4392"
+    },
+    {
+      "Date": "2022-11-17 09:00",
+      "Rate": "19.4433"
     }
   ]
 }
