commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45335,6 +45335,10 @@
     {
       "Date": "2022-11-17 09:00",
       "Rate": "19.4433"
+    },
+    {
+      "Date": "2022-11-17 10:00",
+      "Rate": "19.4433"
     }
   ]
 }
