commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45339,6 +45339,10 @@
     {
       "Date": "2022-11-17 10:00",
       "Rate": "19.4433"
+    },
+    {
+      "Date": "2022-11-17 11:00",
+      "Rate": "19.4275"
     }
   ]
 }
