commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45343,6 +45343,10 @@
     {
       "Date": "2022-11-17 11:00",
       "Rate": "19.4275"
+    },
+    {
+      "Date": "2022-11-17 12:00",
+      "Rate": "19.4142"
     }
   ]
 }
