--- a/indexRt.html
+++ b/indexRt.html
@@ -45347,6 +45347,10 @@
     {
       "Date": "2022-11-17 12:00",
       "Rate": "19.4142"
+    },
+    {
+      "Date": "2022-11-17 13:00",
+      "Rate": "19.4138"
     }
   ]
 }
