commit from netcore service

--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -33,11 +33,11 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 19.7466225,
-  "buy": 19.012,
-  "date": "2022-11-17 17:10:11",
-  "prev_buy": 19.6489425,
-  "prev_sell": 18.91498
+  "sell": 19.7690075,
+  "buy": 19.01396,
+  "date": "2022-11-17 17:20:11",
+  "prev_buy": 19.656065,
+  "prev_sell": 18.9238
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -57,11 +57,11 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.6495875,
-  "buy": 19.109,
-  "date": "2022-11-17 17:10:13",
-  "prev_buy": 19.5523875,
-  "prev_sell": 19.011485
+  "sell": 19.6718625,
+  "buy": 19.11097,
+  "date": "2022-11-17 17:20:13",
+  "prev_buy": 19.559475,
+  "prev_sell": 19.02035
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -89,11 +89,11 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.79514,
-  "buy": 19.012,
-  "date": "2022-11-17 17:10:15",
-  "prev_buy": 19.69722,
-  "prev_sell": 18.91498
+  "sell": 19.81758,
+  "buy": 19.01396,
+  "date": "2022-11-17 17:20:16",
+  "prev_buy": 19.70436,
+  "prev_sell": 18.9238
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -108,16 +108,16 @@
   "sell": 20.33,
   "buy": 19.81,
   "date": "2022-11-17 17:00:15",
-  "prev_buy": 20.22,
-  "prev_sell": 19.69
+  "prev_buy": 20.33,
+  "prev_sell": 19.81
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 19.919,
-  "buy": 18.9085,
-  "date": "2022-11-17 17:10:17",
-  "prev_buy": 19.8186,
-  "prev_sell": 18.8081
+  "sell": 19.9183,
+  "buy": 18.9078,
+  "date": "2022-11-17 17:20:17",
+  "prev_buy": 19.8125,
+  "prev_sell": 18.802
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -161,91 +161,91 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.717512,
-  "buy": 18.9053,
-  "date": "2022-11-17 17:10:22",
-  "prev_buy": 19.619976,
-  "prev_sell": 18.8088245
+  "sell": 19.739864,
+  "buy": 18.907249,
+  "date": "2022-11-17 17:20:23",
+  "prev_buy": 19.627088,
+  "prev_sell": 18.817595
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.756326,
-  "buy": 18.9441,
-  "date": "2022-11-17 17:10:22",
-  "prev_buy": 19.658598,
-  "prev_sell": 18.8474265
+  "sell": 19.778722,
+  "buy": 18.946053,
+  "date": "2022-11-17 17:20:24",
+  "prev_buy": 19.665724,
+  "prev_sell": 18.856215
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.7660295,
-  "buy": 18.7695,
-  "date": "2022-11-17 17:10:23",
-  "prev_buy": 19.6682535,
-  "prev_sell": 18.6737175
+  "sell": 19.7884365,
+  "buy": 18.771435,
+  "date": "2022-11-17 17:20:24",
+  "prev_buy": 19.675383,
+  "prev_sell": 18.682425
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.7252748,
-  "buy": 18.96544,
-  "date": "2022-11-17 17:10:24",
-  "prev_buy": 19.6277004,
-  "prev_sell": 18.8686576
+  "sell": 19.7476356,
+  "buy": 18.9673952,
+  "date": "2022-11-17 17:20:25",
+  "prev_buy": 19.6348152,
+  "prev_sell": 18.877456
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.639884,
-  "buy": 18.7792,
-  "date": "2022-11-17 17:10:24",
-  "prev_buy": 19.542732,
-  "prev_sell": 18.683368
+  "sell": 19.662148,
+  "buy": 18.781136,
+  "date": "2022-11-17 17:20:26",
+  "prev_buy": 19.549816,
+  "prev_sell": 18.69208
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 19.814547,
-  "buy": 18.5658,
-  "date": "2022-11-17 17:10:25",
-  "prev_buy": 19.716531,
-  "prev_sell": 18.471057
+  "sell": 19.837009,
+  "buy": 18.567714,
+  "date": "2022-11-17 17:20:26",
+  "prev_buy": 19.723678,
+  "prev_sell": 18.47967
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.775733,
-  "buy": 18.9926,
-  "date": "2022-11-17 17:10:26",
-  "prev_buy": 19.677909,
-  "prev_sell": 18.895679
+  "sell": 19.798151,
+  "buy": 18.994558,
+  "date": "2022-11-17 17:20:27",
+  "prev_buy": 19.685042,
+  "prev_sell": 18.90449
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 19.892175,
-  "buy": 18.624,
-  "date": "2022-11-17 17:10:26",
-  "prev_buy": 19.793775,
-  "prev_sell": 18.52896
+  "sell": 19.914725,
+  "buy": 18.62592,
+  "date": "2022-11-17 17:20:27",
+  "prev_buy": 19.80095,
+  "prev_sell": 18.5376
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 19.86209415,
-  "buy": 18.9441,
-  "date": "2022-11-17 17:10:26",
-  "prev_buy": 19.76384295,
-  "prev_sell": 18.8474265
+  "sell": 19.88461005,
+  "buy": 18.946053,
+  "date": "2022-11-17 17:20:28",
+  "prev_buy": 19.7710071,
+  "prev_sell": 18.856215
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 19.8436575,
-  "buy": 18.9635,
-  "date": "2022-11-17 17:10:27",
-  "prev_buy": 19.7454975,
-  "prev_sell": 18.8667275
+  "sell": 19.8661525,
+  "buy": 18.965455,
+  "date": "2022-11-17 17:20:28",
+  "prev_buy": 19.752655,
+  "prev_sell": 18.875525
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 19.8436575,
-  "buy": 18.9538,
-  "date": "2022-11-17 17:10:28",
-  "prev_buy": 19.7454975,
-  "prev_sell": 18.857077
+  "sell": 19.8661525,
+  "buy": 18.955754,
+  "date": "2022-11-17 17:20:29",
+  "prev_buy": 19.752655,
+  "prev_sell": 18.86587
 },{
   "bank_id": 32,
   "bank_name": "BANORTE",
