commit from netcore service

--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -33,11 +33,11 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 19.7690075,
-  "buy": 19.01396,
-  "date": "2022-11-17 17:20:11",
-  "prev_buy": 19.656065,
-  "prev_sell": 18.9238
+  "sell": 19.7669725,
+  "buy": 19.012,
+  "date": "2022-11-17 17:40:11",
+  "prev_buy": 19.647925,
+  "prev_sell": 18.9091
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -57,11 +57,11 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.6718625,
-  "buy": 19.11097,
-  "date": "2022-11-17 17:20:13",
-  "prev_buy": 19.559475,
-  "prev_sell": 19.02035
+  "sell": 19.6698375,
+  "buy": 19.109,
+  "date": "2022-11-17 17:40:13",
+  "prev_buy": 19.551375,
+  "prev_sell": 19.005575
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -89,11 +89,11 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.81758,
-  "buy": 19.01396,
-  "date": "2022-11-17 17:20:16",
-  "prev_buy": 19.70436,
-  "prev_sell": 18.9238
+  "sell": 19.81554,
+  "buy": 19.012,
+  "date": "2022-11-17 17:40:15",
+  "prev_buy": 19.6962,
+  "prev_sell": 18.9091
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -105,19 +105,19 @@
 },{
   "bank_id": 14,
   "bank_name": "MONEX",
-  "sell": 20.33,
-  "buy": 19.81,
-  "date": "2022-11-17 17:00:15",
-  "prev_buy": 20.33,
-  "prev_sell": 19.81
+  "sell": 20.22,
+  "buy": 19.69,
+  "date": "2022-11-17 17:40:16",
+  "prev_buy": 20.22,
+  "prev_sell": 19.69
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 19.9183,
-  "buy": 18.9078,
-  "date": "2022-11-17 17:20:17",
-  "prev_buy": 19.8125,
-  "prev_sell": 18.802
+  "sell": 19.9178,
+  "buy": 18.9073,
+  "date": "2022-11-17 17:40:17",
+  "prev_buy": 19.8312,
+  "prev_sell": 18.8207
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -161,91 +161,91 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.739864,
-  "buy": 18.907249,
-  "date": "2022-11-17 17:20:23",
-  "prev_buy": 19.627088,
-  "prev_sell": 18.817595
+  "sell": 19.737832,
+  "buy": 18.9053,
+  "date": "2022-11-17 17:40:21",
+  "prev_buy": 19.61896,
+  "prev_sell": 18.8029775
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.778722,
-  "buy": 18.946053,
-  "date": "2022-11-17 17:20:24",
-  "prev_buy": 19.665724,
-  "prev_sell": 18.856215
+  "sell": 19.776686,
+  "buy": 18.9441,
+  "date": "2022-11-17 17:40:22",
+  "prev_buy": 19.65758,
+  "prev_sell": 18.8415675
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.7884365,
-  "buy": 18.771435,
-  "date": "2022-11-17 17:20:24",
-  "prev_buy": 19.675383,
-  "prev_sell": 18.682425
+  "sell": 19.7863995,
+  "buy": 18.7695,
+  "date": "2022-11-17 17:40:22",
+  "prev_buy": 19.667235,
+  "prev_sell": 18.6679125
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.7476356,
-  "buy": 18.9673952,
-  "date": "2022-11-17 17:20:25",
-  "prev_buy": 19.6348152,
-  "prev_sell": 18.877456
+  "sell": 19.7456028,
+  "buy": 18.96544,
+  "date": "2022-11-17 17:40:23",
+  "prev_buy": 19.626684,
+  "prev_sell": 18.862792
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.662148,
-  "buy": 18.781136,
-  "date": "2022-11-17 17:20:26",
-  "prev_buy": 19.549816,
-  "prev_sell": 18.69208
+  "sell": 19.660124,
+  "buy": 18.7792,
+  "date": "2022-11-17 17:40:23",
+  "prev_buy": 19.54172,
+  "prev_sell": 18.67756
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 19.837009,
-  "buy": 18.567714,
-  "date": "2022-11-17 17:20:26",
-  "prev_buy": 19.723678,
-  "prev_sell": 18.47967
+  "sell": 19.834967,
+  "buy": 18.5658,
+  "date": "2022-11-17 17:40:24",
+  "prev_buy": 19.71551,
+  "prev_sell": 18.465315
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.798151,
-  "buy": 18.994558,
-  "date": "2022-11-17 17:20:27",
-  "prev_buy": 19.685042,
-  "prev_sell": 18.90449
+  "sell": 19.796113,
+  "buy": 18.9926,
+  "date": "2022-11-17 17:40:24",
+  "prev_buy": 19.67689,
+  "prev_sell": 18.889805
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 19.914725,
-  "buy": 18.62592,
-  "date": "2022-11-17 17:20:27",
-  "prev_buy": 19.80095,
-  "prev_sell": 18.5376
+  "sell": 19.912675,
+  "buy": 18.624,
+  "date": "2022-11-17 17:40:25",
+  "prev_buy": 19.79275,
+  "prev_sell": 18.5232
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 19.88461005,
-  "buy": 18.946053,
-  "date": "2022-11-17 17:20:28",
-  "prev_buy": 19.7710071,
-  "prev_sell": 18.856215
+  "sell": 19.88256315,
+  "buy": 18.9441,
+  "date": "2022-11-17 17:40:25",
+  "prev_buy": 19.7628195,
+  "prev_sell": 18.8415675
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 19.8661525,
-  "buy": 18.965455,
-  "date": "2022-11-17 17:20:28",
-  "prev_buy": 19.752655,
-  "prev_sell": 18.875525
+  "sell": 19.8641075,
+  "buy": 18.9635,
+  "date": "2022-11-17 17:40:26",
+  "prev_buy": 19.744475,
+  "prev_sell": 18.8608625
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 19.8661525,
-  "buy": 18.955754,
-  "date": "2022-11-17 17:20:29",
-  "prev_buy": 19.752655,
-  "prev_sell": 18.86587
+  "sell": 19.8641075,
+  "buy": 18.9538,
+  "date": "2022-11-17 17:40:27",
+  "prev_buy": 19.744475,
+  "prev_sell": 18.851215
 },{
   "bank_id": 32,
   "bank_name": "BANORTE",
