commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45351,6 +45351,10 @@
     {
       "Date": "2022-11-17 13:00",
       "Rate": "19.4138"
+    },
+    {
+      "Date": "2022-11-17 14:00",
+      "Rate": "19.4167"
     }
   ]
 }
