commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45355,6 +45355,10 @@
     {
       "Date": "2022-11-17 14:00",
       "Rate": "19.4167"
+    },
+    {
+      "Date": "2022-11-17 15:00",
+      "Rate": "19.4145"
     }
   ]
 }
