commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45359,6 +45359,10 @@
     {
       "Date": "2022-11-17 15:00",
       "Rate": "19.4145"
+    },
+    {
+      "Date": "2022-11-17 16:00",
+      "Rate": "19.4136"
     }
   ]
 }
