commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45363,6 +45363,10 @@
     {
       "Date": "2022-11-17 16:00",
       "Rate": "19.4136"
+    },
+    {
+      "Date": "2022-11-17 17:00",
+      "Rate": "19.3978"
     }
   ]
 }
