commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45367,6 +45367,10 @@
     {
       "Date": "2022-11-17 17:00",
       "Rate": "19.3978"
+    },
+    {
+      "Date": "2022-11-17 18:00",
+      "Rate": "19.4079"
     }
   ]
 }
