commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45371,6 +45371,10 @@
     {
       "Date": "2022-11-17 18:00",
       "Rate": "19.4079"
+    },
+    {
+      "Date": "2022-11-17 19:00",
+      "Rate": "19.4042"
     }
   ]
 }
