commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45375,6 +45375,10 @@
     {
       "Date": "2022-11-17 19:00",
       "Rate": "19.4042"
+    },
+    {
+      "Date": "2022-11-17 20:00",
+      "Rate": "19.3926"
     }
   ]
 }
