--- a/indexRt.html
+++ b/indexRt.html
@@ -45379,6 +45379,10 @@
     {
       "Date": "2022-11-17 20:00",
       "Rate": "19.3926"
+    },
+    {
+      "Date": "2022-11-17 21:00",
+      "Rate": "19.4116"
     }
   ]
 }
