commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45383,6 +45383,10 @@
     {
       "Date": "2022-11-17 21:00",
       "Rate": "19.4116"
+    },
+    {
+      "Date": "2022-11-17 22:00",
+      "Rate": "19.4155"
     }
   ]
 }
