commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45387,6 +45387,10 @@
     {
       "Date": "2022-11-17 22:00",
       "Rate": "19.4155"
+    },
+    {
+      "Date": "2022-11-17 23:00",
+      "Rate": "19.4116"
     }
   ]
 }
