commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45391,6 +45391,10 @@
     {
       "Date": "2022-11-17 23:00",
       "Rate": "19.4116"
+    },
+    {
+      "Date": "2022-11-18 00:00",
+      "Rate": "19.4285"
     }
   ]
 }
